--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ td {
 .t9-10 {
   width: 48%;
   height: 46%;
-  background-color: red;
+  background-color: #ff4499;
 }
 .t12-13 {
   width: 29%;
@@ -51,7 +51,7 @@ td {
 .t35-42 {
   width: 9%;
   height: 25%;
-  background-color: red;
+  background-color: #ff4499;
 }
 .t15-25 {
   width: 14%;
@@ -74,7 +74,7 @@ td {
 .t33-34 {
   width: 29%;
   height: 25%;
-  background-color: blue;
+  background-color: #1199ff;
 }
 .t25 {
   width: 24%;
